Added pathfinder sample

--- a/wiki/Routing.wiki
+++ b/wiki/Routing.wiki
@@ -21,6 +21,7 @@ Some theorical consideration
 ----
 Here a [http://processing.org/ Java Processing] library, the [http://www.robotacid.com/PBeta/AILibrary/Pathfinder/index.html Pathfinder Library]
 we would like to android-implement
-
-
+== ==
+[http://www.robotacid.com/PBeta/AILibrary/Pathfinder/astar_demo/index.html pathfinding Astar sample]
+== ==
 [http://www.tom-carden.co.uk/tag/openstreetmap/ OPENSTREETMAP implementation in Processing]
